--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
   "author": "Michael Bebenita",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^16.0.15",
-    "@types/react-dom": "^16.0.2",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
     "electron-packager": "^12.2.0",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.2.2",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "argparse": "^1.0.9",
+    "argparse": "^1.0.10",
     "electron": "^4.0.2",
     "electron-packager-dummy-wine": "^1.0.2",
-    "file-saver": "^1.3.3",
-    "material-ui": "^0.19.4",
-    "react": "^16.0.2",
-    "react-dom": "^16.0.2",
-    "react-input-autosize": "^1.1.0",
-    "react-select": "^1.0.0-rc.10",
-    "react-tap-event-plugin": "^3.0.1"
+    "file-saver": "^2.0.0",
+    "material-ui": "^3.9.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-input-autosize": "^2.2.1",
+    "react-select": "^2.3.0",
+    "react-tap-event-plugin": "^3.0.3"
   }
 }
