--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "electron": "^4.0.2",
     "electron-packager-dummy-wine": "^1.0.2",
     "file-saver": "^2.0.0",
-    "material-ui": "^3.9.0",
+    "@material-ui/core": "^3.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-input-autosize": "^2.2.1",
