--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.2",
     "webpack": "^4.29.0"
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
     "argparse": "^1.0.10",
